--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 sudo: required
 before_install: 
   - chmod +x 001-cli/gradlew
+script: 001-cli/gradlew test
 jdk:
 - oraclejdk8
 notifications:
