--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 sudo: required
-script: echo "skip"
+script: cd 007-roguelike && chmod +x gradlew && gradle test
 jdk:
 - oraclejdk8
 notifications:
