--- a/007-roguelike/build.gradle
+++ b/007-roguelike/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile 'log4j:log4j:1.2.17'
+    compile 'commons-logging:commons-logging:1.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile files('asciiPanel.jar')
 }
